--- a/Game of Life/index.css
+++ b/Game of Life/index.css
@@ -1,28 +1,45 @@
 body 
 {
-	background-image: url('images/bee.png'), url('images/background.jpg');
+	background-image: url('images/bee.png'), url('images/one.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
 }
-.intro, #title 
+
+.intro
+{
+	text-align: center;
+	font: 400 20px/1.2 'Merienda One', Helvetica, sans-serif;
+	color: rgba(0,0,0,0.7);
+	text-shadow: 3px 3px 3px #fff;
+	border: solid black 5px;
+	display: inline-block;
+	width: 700px;
+	margin-top: -10%;
+	margin-left: 5%;
+}
+
+#title 
 {
 	text-align: center;
 	font: 400 20px/1.2 'Merienda One', Helvetica, sans-serif;
 	color: rgba(0,0,0,0.7);
 	text-shadow: 3px 3px 3px #fff;
 }
+
 #start_button 
 {
 	margin: 0 auto;
 	display: block;
 }
+
 #title 
 {
 	font: 400 100px/1.3 'Oleo Script', Helvetica, sans-serif;
 	color: #2b2b2b;
 	text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
+
 div
 {
 	text-align: center;
@@ -30,6 +47,7 @@ div
 	color: #2b2b2b;
 	text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
 }
+
 a
 {
 	text-decoration: none;
