--- a/Game of Life/character.css
+++ b/Game of Life/character.css
@@ -1,25 +1,18 @@
 body
 {
-	background-image: url('images/two.jpg');
+	background-image: url('images/floral.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
-}
-
-div
-{
+	font-family: "Comfortaa";
 	text-align: center;
+	font-size: 150%;
+	font-weight: bold;
 }
 
 #charImg
 {
 	max-width: 100;
 	max-height: 100;
-	margin-top: 10%;
-}
-
-form
-{
-	text-align: center;
-	font: 400 20px/1.2 'Merienda One', Helvetica, sans-serif;
+	cursor: pointer;
 }
