--- a/Game of Life/index.css
+++ b/Game of Life/index.css
@@ -14,6 +14,7 @@ body
 	text-shadow: 3px 3px 3px #fff;
 	border: solid black 5px;
 	display: inline-block;
+	padding: 1%;
 	width: 700px;
 	margin-top: -10%;
 	margin-left: 5%;
@@ -31,6 +32,7 @@ body
 {
 	margin: 0 auto;
 	display: block;
+	color: white;
 }
 
 #title 
